<resources>
    <string name="app_name">WooT Hoo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_store_url">https://play.google.com/store/apps/details?id=com.keyontech.woot1</string>

    <!--Nav bar menu items-->
    <string name="nav_bar_specifications">Specifications</string>
    <string name="nav_bar_poll">Poll</string>
    <string name="nav_bar_video">Video</string>
    <string name="nav_bar_about">About</string>
    <string name="nav_bar_refresh">refresh data</string>
    <string name="nav_bar_rate_app">Rate App</string>
    <string name="nav_bar_share_app">Share App</string>
    <string name="menu_share_deal">Share App</string>
    <string name="nav_bar_header_extras">Extras</string>

    <!--layout text-->
    <string name="card_view_1_header">TITLE</string>
    <string name="card_view_2_header">FEATURES</string>
    <string name="card_view_3_header">SPECIFICATIONS</string>

</resources>
